--- a/about.html
+++ b/about.html
@@ -85,24 +85,15 @@
   <div class="container-fluid bg-lightgrey position-relative">
     <div class="container">
       <div class="row">
-          <div class="col-md-6 about-text bg-white position-absolute container">
-            <h2 class="mt-4 mb-3">About Huili</h2>
-              <p>Dezhou Huili Water Tank Co.,Ltd is a professional modular water tank manufacturer and supplier integrating with new technology research and development and production.</p>
-              <p>With 4 production lines for GRP modular water tank,HDG water tank,Stainless steel water tank,GSC underground water tank.We employ 58 skilled engineers and have 8 sets of molding pressure machines.</p>
-              <p>With over 20 years of manufacturing experience,we have completed over 2000 projects in China and aboard,we also have a skilled professioanal installation team available for overseas projects.</p>
+          <div class="col-md-6 mt-5 mb-5 d-flex">
+              <img class="img-fluid" src="img/about-1.jpg">
           </div>
-          <div class="col-md-6 about-image">
-            <img class="img-fluid" src="img/about-1.jpg">
-          </div>
-          <!-- <div class="col-md-6 mt-5 mb-5 bg-white about-content">
+          <div class="col-md-6 mt-5 mb-5 bg-white about-content">
               <h2 class="mt-4 mb-3">About Huili</h2>
               <p>Dezhou Huili Water Tank Co.,Ltd is a professional modular water tank manufacturer and supplier integrating with new technology research and development and production.</p>
               <p>With 4 production lines for GRP modular water tank,HDG water tank,Stainless steel water tank,GSC underground water tank.We employ 58 skilled engineers and have 8 sets of molding pressure machines.</p>
               <p>With over 20 years of manufacturing experience,we have completed over 2000 projects in China and aboard,we also have a skilled professioanal installation team available for overseas projects.</p>
           </div>
-          <div class="col-md-6 mt-5 mb-5 d-flex">
-              <img class="img-fluid" src="img/about-1.jpg">
-          </div> -->
       </div>
     </div>
   </div>
