--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <div class="container-fluid bg-lightgrey">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-md-6 col-sm-11 home-content" data-aos="flip-left">
+        <div class="col-md-6 col-sm-11 home-content" data-aos="fade-down">
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
@@ -137,7 +137,7 @@
 
   <div class="container mt-5 mb-5 text-center">
     <div class="row">
-      <div class="col-md-3 col-sm-10">
+      <div class="col-md-3 col-sm-10" data-aos="fade-right">
         <div class="card my-2">
           <div class="card-body">
             <h2 class="mt-3 text-primary">23</h2>
@@ -145,7 +145,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-sm-10">
+      <div class="col-md-3 col-sm-10" data-aos="fade-right">
         <div class="card my-2">
           <div class="card-body">
             <h2 class="mt-3 text-primary">8</h2>
@@ -153,7 +153,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-sm-10">
+      <div class="col-md-3 col-sm-10" data-aos="fade-left">
         <div class="card my-2">
           <div class="card-body">
             <h2 class="mt-3 text-primary">58</h2>
@@ -161,7 +161,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-sm-10">
+      <div class="col-md-3 col-sm-10" data-aos="fade-left">
         <div class="card my-2">
           <div class="card-body">
             <h2 class="mt-3 text-primary">4</h2>
