--- a/about.html
+++ b/about.html
@@ -10,6 +10,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://kit.fontawesome.com/0e94899dab.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="style.css">
 
   <title>Hello, world!</title>
@@ -85,14 +87,14 @@
   <div class="container-fluid bg-lightgrey position-relative">
     <div class="container">
       <div class="row">
-          <div class="col-md-6 mt-5 mb-5 d-flex">
+          <div class="col-md-6 mt-5 mb-5 d-flex about-image" data-aos="fade-right">
               <img class="img-fluid" src="img/about-1.jpg">
           </div>
-          <div class="col-md-6 mt-5 mb-5 bg-white about-content">
-              <h2 class="mt-4 mb-3">About Huili</h2>
-              <p>Dezhou Huili Water Tank Co.,Ltd is a professional modular water tank manufacturer and supplier integrating with new technology research and development and production.</p>
-              <p>With 4 production lines for GRP modular water tank,HDG water tank,Stainless steel water tank,GSC underground water tank.We employ 58 skilled engineers and have 8 sets of molding pressure machines.</p>
-              <p>With over 20 years of manufacturing experience,we have completed over 2000 projects in China and aboard,we also have a skilled professioanal installation team available for overseas projects.</p>
+          <div class="col-md-6 mt-5 mb-5 bg-white about-content" data-aos="fade-left">
+              <h2 class="mt-4 mb-3 p-3">About Huili</h2>
+              <p class="mx-3">Dezhou Huili Water Tank Co.,Ltd is a professional modular water tank manufacturer and supplier integrating with new technology research and development and production.</p>
+              <p class="mx-3">With 4 production lines for GRP modular water tank,HDG water tank,Stainless steel water tank,GSC underground water tank.We employ 58 skilled engineers and have 8 sets of molding pressure machines.</p>
+              <p class="mx-3 mb-5">With over 20 years of manufacturing experience,we have completed over 2000 projects in China and aboard,we also have a skilled professioanal installation team available for overseas projects.</p>
           </div>
       </div>
     </div>
@@ -101,23 +103,189 @@
   <div class="container-fluid">
     <div class="container mt-5 mb-5">
         <div class="row ">
-            <div class="col-md-6 mt-5">
-                <img class="img-fluid" src="img/about-2.jpg">
-            </div>
-            <div class="col-md-6 mt-5">
-                <h2>Our Capabilities</h2>
-                <ul>
-                    <li>Water tank size designed according to exact customer requirement.</li>
-                    <li>Accessories available for both inner/outer water tank for drinking/non-drinking applications.</li>
-                    <li>Flange types and positions meet American and English Standards.</li>
-                    <li>CAD drawings matches customers’ requirements for better confirmation.</li>
+            <div class="col-md-6 mt-5" data-aos="fade-right">
+                <h2 class="mb-4">Our Capabilities</h2>
+                <ul class="fa-ul">
+                    <li>
+                        <span class="fa-li">
+                            <i class="fa-solid fa-xl fa-circle-chevron-right"></i>
+                        </span>
+                        <p class="mx-2">Water tank size designed according to exact customer requirement.</p>
+                    </li>
+                    <li>
+                        <span class="fa-li">
+                            <i class="fa-solid fa-xl fa-circle-chevron-right"></i>
+                        </span>
+                        <p class="mx-2">Accessories available for both inner/outer water tank for drinking/non-drinking applications.</p>
+                    </li>
+                    <li>
+                                                <span class="fa-li">
+                            <i class="fa-solid fa-xl fa-circle-chevron-right"></i>
+                        </span>
+                        <p class="mx-2">
+                            Flange types and positions meet American and English Standards.
+                        </p>
+                    </li>
+                    <li>
+                                                <span class="fa-li">
+                            <i class="fa-solid fa-xl fa-circle-chevron-right"></i>
+                        </span>
+                        <p class="mx-2">
+                            CAD drawings matches customers’ requirements for better confirmation.
+                        </p></li>
                 </ul>
+            </div>
+            <div class="col-md-6 mt-5" data-aos="fade-left">
+                <img class="img-fluid" src="img/about-2.jpg" style="border-radius: 0px 50px 0px 50px;">
             </div>
         </div>
     </div>
   </div>
 
+  <div class="container-fluid bg-lightgrey">
+    <div class="container mt-5 mb-5 text-center">
+        <div class="row">
+          <div class="col-md-3 col-sm-10 about-box" data-aos="fade-right">
+            <div class="card my-2">
+              <div class="card-body">
+                <h2 class="mt-3 text-primary">8000K $</h2>
+                <p>Annual sales volume</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-10 about-box" data-aos="fade-right">
+            <div class="card my-2">
+              <div class="card-body">
+                <h2 class="mt-3 text-primary">50%</h2>
+                <p>Southeast Asia Market</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-10 about-box" data-aos="fade-left">
+            <div class="card my-2">
+              <div class="card-body">
+                <h2 class="mt-3 text-primary">30%</h2>
+                <p>Middle East Market</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-10 about-box mb-3" data-aos="fade-left">
+            <div class="card my-2">
+              <div class="card-body">
+                <h2 class="mt-3 text-primary">20%</h2>
+                <p>Other Market</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
 
+  <div class="container-fluid">
+    <div class="container">
+        <div class="row">
+            <div class="col-md mt-5 mb-5">
+                <h2>Have a Factory Tour</h2>
+            </div>
+        </div>
+    
+        <div class="row">
+            <div class="col-md mb-5">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 3"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 3"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 3"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="img/GRP-Panels-stock.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/Other-SMC-Molding-Pressed-Products.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/Stainless-Steel-Raw-Materials.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/Steel-panels-stock.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/company-corner-01.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/molding-pressure-machine.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/GRP-Water-Tank-Raw-Materials.jpg" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+            </div>
+        </div>
+    </div>
+  </div>
+
+  <div class="container-fluid bg-lightgrey">
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-md">
+                <h2 class="mt-5 mb-5">Certificates</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3 text-center" data-aos="fade-right">
+                <img class="img-fluid" src="img/WRAS-certificate-400x566.jpg" alt="">
+                <p class="mt-4">WRAS Certificate</p>
+            </div>
+            <div class="col-md-3 text-center" data-aos="fade-right">
+                <img class="img-fluid" src="img/TUV-PSB-Certificate-400x566.jpg" alt="">
+                <p class="mt-4">TUV-PSB-Certificate</p>
+            </div>
+            <div class="col-md-3 text-center" data-aos="fade-left">
+                <img class="img-fluid" src="img/SGS-Material-Content-testing-report-1-400x566.jpg" alt="">
+                <p class="mt-4">SGS Material Content Testing Report (1)</p>
+            </div>
+            <div class="col-md-3 text-center" data-aos="fade-left">
+                <img class="img-fluid" src="img/SGS-Material-Content-testing-report-2-1200x1698.jpg" alt="">
+                <p class="mt-4">SGS Material Content Testing Report (2)</p>
+            </div>
+        </div>
+
+        <hr class="mt-5 mb-5">
+
+        <div class="row">
+            <div class="col-md-3 mb-5 text-center" data-aos="fade-right">
+                <img class="img-fluid" src="img/ISO-9001-Certificate-400x566.jpg" alt="">
+                <p class="mt-4">ISO 9001 Certificate</p>
+            </div>
+            <div class="col-md-3 text-center" data-aos="fade-right">
+                <img class="img-fluid" src="img/GRP-Tank-testing-report-1-400x571.jpg" alt="">
+                <p class="mt-4">GRP Tank Testing Report (1)</p>
+            </div>
+            <div class="col-md-3 text-center" data-aos="fade-left">
+                <img class="img-fluid" src="img/GRP-Tank-testing-report-2-400x571.jpg" alt="">
+                <p class="mt-4">GRP Tank Testing Report (2)</p>
+            </div>
+            <div class="col-md-3 text-center" data-aos="fade-left">
+                <img class="img-fluid" src="img/GRP-Tank-testing-report-3-400x571.jpg" alt="">
+                <p class="mt-4">GRP Tank Testing Report (3)</p>
+            </div>
+        </div>
+    </div>
+  </div>
 
   <div class="container-fluid footer">
     <div class="row text-white">
@@ -159,6 +327,24 @@
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+  </script>
+
+<script src="https://kit.fontawesome.com/0e94899dab.js" crossorigin="anonymous"></script>
+
+<script>
+    var x = document.getElementById("coverBackground");
+
+    function enableAutoplay() { 
+      x.autoplay = true;
+      x.load();
+    } 
+  </script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      offset: 200,
+      duration:1200,
+    });
   </script>
 
   <!-- Option 2: Separate Popper and Bootstrap JS -->
