--- a/services.html
+++ b/services.html
@@ -11,6 +11,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://kit.fontawesome.com/0e94899dab.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="style.css">
 
     <title>Hello, world!</title>
@@ -86,10 +87,10 @@
     <section>
         <div class="container mt-5 mb-5">
             <div class="row ">
-                <div class="col-md-6 mt-5">
+                <div class="col-md-6 mt-5" data-aos="fade-right">
                     <img class="img-fluid" src="img/cad_drawing.png">
                 </div>
-                <div class="col-md-6 mt-5">
+                <div class="col-md-6 mt-5" data-aos="fade-up">
                     <h2 class="mb-4">CAD Drawing Confirmation</h2>
                     <ul class="fa-ul">
                         <li class="mb-3">
@@ -127,7 +128,7 @@
     <div class="container-fluid bg-lightgrey">
         <div class="container mt-5 mb-5">
             <div class="row">
-                <div class="col-md-6 mt-5">
+                <div class="col-md-6 mt-5" data-aos="fade-up">
                     <h2 class="mb-4">Manufacturing Process</h2>
                     <ul class="fa-ul">
                         <li class="mb-3">
@@ -160,7 +161,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-md-6 mt-5 mb-5">
+                <div class="col-md-6 mt-5 mb-5" data-aos="fade-left">
                     <img class="img-fluid" src="img/manufacturing_process.png">
                 </div>
             </div>
@@ -170,10 +171,10 @@
     <section>
         <div class="container mt-5 mb-5">
             <div class="row ">
-                <div class="col-md-6 mt-5">
+                <div class="col-md-6 mt-5" data-aos="fade-right">
                     <img class="img-fluid" src="img/packing.png">
                 </div>
-                <div class="col-md-6 mt-5">
+                <div class="col-md-6 mt-5" data-aos="fade-up">
                     <h2 class="mb-4">Packing</h2>
                     <ul class="fa-ul">
                         <li class="mb-3">
@@ -215,7 +216,7 @@
     <div class="container-fluid bg-lightgrey">
         <div class="container mt-5 mb-5">
             <div class="row">
-                <div class="col-md-6 mt-5">
+                <div class="col-md-6 mt-5" data-aos="fade-up">
                     <h2 class="mb-4">Loading and Delivery</h2>
                     <ul class="fa-ul">
                         <li>
@@ -236,7 +237,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-md-6 mt-5 mb-5">
+                <div class="col-md-6 mt-5 mb-5" data-aos="fade-left">
                     <img class="img-fluid" src="img/loading_and_delivery.png">
                 </div>
             </div>
@@ -246,16 +247,16 @@
     <div class="container-fluid">
         <div class="container text-center">
             <div class="row justify-content-center">
-                <div class="col-md mb-4">
+                <div class="col-md mb-4" data-aos="fade-up">
                     <h1>Water Tanks Demonstration</h1>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-md-6  mb-5">
+                <div class="col-md-6  mb-5" data-aos="fade-right">
                     <img class="img-fluid" src="img/wtd-1.png">
                 </div>
-                <div class="col-md-6 mb-5">
+                <div class="col-md-6 mb-5" data-aos="fade-left">
                     <img class="img-fluid" src="img/wtd-2.png">
                 </div>
             </div>
@@ -265,7 +266,7 @@
     <section>
         <div class="container mt-5">
             <div class="row">
-                <div class="col-md text-center">
+                <div class="col-md text-center" data-aos="fade-up">
                     <h2 class="text-primary test"><b> Connect to your next successful water tank project !</b></h2>
                     <a href="#" class="btn btn-blue mt-5 mb-5">&nbsp;&nbsp; GET A QUOTE &nbsp;&nbsp;</a>
                 </div>
@@ -316,6 +317,22 @@
     </script>
 
     <script src="https://kit.fontawesome.com/0e94899dab.js" crossorigin="anonymous"></script>
+
+    <script>
+        var x = document.getElementById("coverBackground");
+    
+        function enableAutoplay() { 
+          x.autoplay = true;
+          x.load();
+        } 
+      </script>
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+      <script>
+        AOS.init({
+          offset: 200,
+          duration:1200,
+        });
+      </script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
