--- a/all_products_2.html
+++ b/all_products_2.html
@@ -90,12 +90,12 @@
         </div>
 
         <div class="row">
-            <div class="col-md-3 col-sm-4 mt-4">
+            <div class="col-md-3 mt-4">
               <a class="text-decoration-none text-dark" href="">
                 <div class="card">
-                    <img src="img/farm_water_tankk.png" class="card-img-top img-fluid" alt="...">
+                    <img src="img/collapsible-water-tank.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
-                      <p class="card-title mt-2">Farm water tank</p>
+                      <p class="card-title mt-2">Collapsible water tank</p>
                     </div>
                   </div>
               </a>
@@ -103,9 +103,9 @@
             <div class="col-md-3 mt-4">
               <a class="text-decoration-none text-dark" href="">
                 <div class="card">
-                    <img src="img/foldable_water_tank.png" class="card-img-top" alt="...">
+                    <img src="img/grp-water-tank.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
-                      <p class="card-title mt-2">Foldable water tank</p>
+                      <p class="card-title mt-2">GRP water tank</p>
                     </div>
                   </div>
               </a>
@@ -113,9 +113,9 @@
             <div class="col-md-3 mt-4">
               <a class="text-decoration-none text-dark" href="">
                 <div class="card">
-                    <img src="img/Modular_water_tank.png" class="card-img-top" alt="...">
+                    <img src="img/1000-m3-water-tank.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
-                      <p class="card-title mt-2">Modular water tank</p>
+                      <p class="card-title mt-2">1000m3 tank</p>
                     </div>
                   </div>
               </a>
@@ -123,37 +123,27 @@
             <div class="col-md-3 mt-4">
               <a class="text-decoration-none text-dark" href="">
                 <div class="card">
-                    <img src="img/grp_water_storage_tank.png" class="card-img-top" alt="...">
+                    <img src="img/500-liter-water-tank-price.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
-                      <p class="card-title mt-2">GRP water storage tank</p>
+                      <p class="card-title mt-2">500 liter water tank price</p>
                     </div>
                   </div>
               </a>
             </div>
             <div class="col-md-3 mt-4">
                 <div class="card">
-                    <img src="img/water_tank_storage.png" class="card-img-top" alt="...">
+                    <img src="img/GRP-Water-Tank-01.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
-                      <p class="card-title mt-2">Water tank storage</p>
+                      <p class="card-title mt-2">1000l plastic water tank</p>
                     </div>
                   </div>
             </div>
             <div class="col-md-3 mt-4">
               <a class="text-decoration-none text-dark" href="">
                 <div class="card">
-                    <img src="img/squar_water_tanks.png" class="card-img-top" alt="...">
+                    <img src="img/GRP-Water-Tank-04.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
-                      <p class="card-title mt-2">Square water tanks</p>
-                    </div>
-                  </div>
-              </a>
-            </div>
-            <div class="col-md-3 mt-4">
-              <a class="text-decoration-none text-dark" href="">
-                <div class="card">
-                    <img src="img/flexible_water_tank.png" class="card-img-top" alt="...">
-                    <div class="card-body text-center">
-                      <p class="card-title mt-2">Flexible water tank</p>
+                      <p class="card-title mt-2">Water tanks 10000 liter</p>
                     </div>
                   </div>
               </a>
@@ -161,9 +151,19 @@
             <div class="col-md-3 mt-4">
               <a class="text-decoration-none text-dark" href="">
                 <div class="card">
-                    <img src="img/rain_water_tank.png" class="card-img-top" alt="...">
+                    <img src="img/1000-liter-water-tank-price-1.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
-                      <p class="card-title mt-2">Rain water tank</p>
+                      <p class="card-title mt-2">1000 liter water tank price</p>
+                    </div>
+                  </div>
+              </a>
+            </div>
+            <div class="col-md-3 mt-4">
+              <a class="text-decoration-none text-dark" href="">
+                <div class="card">
+                    <img src="img/water-storage-tank-50000-liter.jpg" class="card-img-top" alt="...">
+                    <div class="card-body text-center">
+                      <p class="card-title mt-2">Water storage tank 50000 liter</p>
                     </div>
                   </div>
               </a>
@@ -174,8 +174,8 @@
           <div class="col-md d-flex justify-content-center">
             <nav aria-label="...">
               <ul class="pagination">
-                <li class="page-item active"><a class="page-link" href="all_products.html">1</a></li>
-                <li class="page-item" aria-current="page">
+                <li class="page-item"><a class="page-link" href="all_products.html">1</a></li>
+                <li class="page-item active" aria-current="page">
                   <a class="page-link" href="all_products_2.html">2</a>
                 </li>
                 <li class="page-item"><a class="page-link" href="all_products_3.html">3</a></li>
@@ -194,7 +194,7 @@
         <div class="row">
             <div class="col-md-3 mt-4">
                 <div class="card">
-                    <img src="img/overhead-water-tank-1.jpg" class="card-img-top img-fluid" alt="...">
+                    <img src="img/overhead-water-tank-1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-title">Overhead water tank</p>
                     </div>
