--- a/all_products.html
+++ b/all_products.html
@@ -91,7 +91,7 @@
   
       <div class="row">
         <div class="col-md-3 col-sm-4 col-xs-4 mt-4">
-          <a class="text-decoration-none text-dark" href="">
+          <a class="text-decoration-none text-dark" href="product_farm_water_tank.html">
             <div class="card">
               <img src="img/farm_water_tankk.png" class="card-img-top img-fluid" alt="...">
               <div class="card-body text-center">
@@ -101,7 +101,7 @@
           </a>
         </div>
         <div class="col-md-3 mt-4">
-          <a class="text-decoration-none text-dark" href="">
+          <a class="text-decoration-none text-dark" href="product_foldable_water_tank.html">
             <div class="card">
               <img src="img/foldable_water_tank.png" class="card-img-top" alt="...">
               <div class="card-body text-center">
@@ -111,7 +111,7 @@
           </a>
         </div>
         <div class="col-md-3 mt-4">
-          <a class="text-decoration-none text-dark" href="">
+          <a class="text-decoration-none text-dark" href="product_modular_water_tank.html">
             <div class="card">
               <img src="img/Modular_water_tank.png" class="card-img-top" alt="...">
               <div class="card-body text-center">
@@ -121,7 +121,7 @@
           </a>
         </div>
         <div class="col-md-3 mt-4">
-          <a class="text-decoration-none text-dark" href="">
+          <a class="text-decoration-none text-dark" href="product_GRP_water_storage_tank.html">
             <div class="card">
               <img src="img/grp_water_storage_tank.png" class="card-img-top" alt="...">
               <div class="card-body text-center">
@@ -131,7 +131,7 @@
           </a>
         </div>
         <div class="col-md-3 mt-4">
-          <a class="text-decoration-none text-dark" href="">
+          <a class="text-decoration-none text-dark" href="product_water_storage_tank.html">
             <div class="card">
               <img src="img/water_tank_storage.png" class="card-img-top" alt="...">
               <div class="card-body text-center">
@@ -141,7 +141,7 @@
           </a>
         </div>
         <div class="col-md-3 mt-4">
-          <a class="text-decoration-none text-dark" href="">
+          <a class="text-decoration-none text-dark" href="product_square_water_storage_tank.html">
             <div class="card">
               <img src="img/squar_water_tanks.png" class="card-img-top" alt="...">
               <div class="card-body text-center">
@@ -151,7 +151,7 @@
           </a>
         </div>
         <div class="col-md-3 mt-4">
-          <a class="text-decoration-none text-dark" href="">
+          <a class="text-decoration-none text-dark" href="product_flexible_water_storage_tank.html">
             <div class="card">
               <img src="img/flexible_water_tank.png" class="card-img-top" alt="...">
               <div class="card-body text-center">
@@ -161,7 +161,7 @@
           </a>
         </div>
         <div class="col-md-3 mt-4">
-          <a class="text-decoration-none text-dark" href="">
+          <a class="text-decoration-none text-dark" href="product_rain_water_storage_tank.html">
             <div class="card">
               <img src="img/rain_water_tank.png" class="card-img-top" alt="...">
               <div class="card-body text-center">
@@ -199,7 +199,7 @@
 
       <div class="row">
         <div class="col-md-3 mt-4 text-center">
-          <a class="text-decoration-none text-dark" href="">
+          <a class="text-decoration-none text-dark" href="overhead_water_tank.html">
             <div class="card">
               <img src="img/overhead-water-tank-1.jpg" class="card-img-top img-fluid" alt="...">
               <div class="card-body">
@@ -209,7 +209,7 @@
           </a>
         </div>
         <div class="col-md-3 mt-4 text-center">
-          <a class="text-decoration-none text-dark" href="">
+          <a class="text-decoration-none text-dark" href="galvanized_steel_water_tank_price.html">
             <div class="card">
               <img src="img/galvanized-steel-water-tank-price.jpg" class="card-img-top" alt="...">
               <div class="card-body">
@@ -219,7 +219,7 @@
           </a>
         </div>
         <div class="col-md-3 mt-4 text-center">
-          <a class="text-decoration-none text-dark" href="">
+          <a class="text-decoration-none text-dark" href="galvanized_water_steel_storage_tanks.html">
             <div class="card">
               <img src="img/galvanized-water-steel-storage-tanks.jpg" class="card-img-top" alt="...">
               <div class="card-body">
@@ -229,7 +229,7 @@
           </a>
         </div>
         <div class="col-md-3 mt-4 text-center">
-          <a class="text-decoration-none text-dark" href="">
+          <a class="text-decoration-none text-dark" href="hot_dip_galvanized.html">
             <div class="card">
               <img src="img/hot-dip-galvanized-water-tank.jpg" class="card-img-top" alt="...">
               <div class="card-body">
@@ -239,7 +239,7 @@
           </a>
         </div>
         <div class="col-md-3 mt-4 text-center">
-          <a class="text-decoration-none text-dark" href="">
+          <a class="text-decoration-none text-dark" href="hot_water_tank_prices.html">
             <div class="card">
               <img src="img/hot-dip-galvanized-water-tank.jpg" class="card-img-top" alt="...">
               <div class="card-body">
@@ -249,7 +249,7 @@
           </a>
         </div>
         <div class="col-md-3 mt-4 text-center">
-          <a class="text-decoration-none text-dark" href="">
+          <a class="text-decoration-none text-dark" href="hot_water_tank.html">
             <div class="card">
               <img src="img/hot-water-tank.jpg" class="card-img-top" alt="...">
               <div class="card-body">
@@ -259,7 +259,7 @@
           </a>
         </div>
         <div class="col-md-3 mt-4 text-center">
-          <a class="text-decoration-none text-dark" href="">
+          <a class="text-decoration-none text-dark" href="steel_water_tank.html">
             <div class="card">
               <img src="img/steel-water-tank.jpg" class="card-img-top" alt="...">
               <div class="card-body">
@@ -269,11 +269,11 @@
           </a>
         </div>
         <div class="col-md-3 mt-4 text-center">
-          <a class="text-decoration-none text-dark" href="">
+          <a class="text-decoration-none text-dark" href="galvanized_water_tank.html">
             <div class="card">
-              <img src="img/hdg_water_tank.png" class="card-img-top" alt="...">
+              <img src="img/HDG-water-tank-1.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <p class="card-title mt-2">Steel water tank</p>
+                <p class="card-title mt-2">Galvanized water tank</p>
               </div>
             </div>
           </a>
