--- a/hot_dip_galvanized.html
+++ b/hot_dip_galvanized.html
@@ -75,8 +75,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md text-center mt-5 mb-5 text-white">
-                    <h1>Farm water tank</h1>
-                    Home > GRP water tank > Farm water tank
+                    <h1>Hot dip galvanized water tank</h1>
+                    Home > HDG water tank > Hot dip galvanized water tank
                     </nav>
                 </div>
             </div>
@@ -88,29 +88,24 @@
         <div class="container">
             <div class="row">
                 <div class="col-md text-center">
-                    <img class="img-fluid" src="../img/farm-water-tank-2.jpg" alt="">
-                    <p>*Note: This is farm water tank real project in Malaysia,do not copy.</p>
+                    <img class="img-fluid" src="img/Hot-dip-galvanized-water-tank-e1536568838592.jpg" alt="">
+                    <p>*Note: This hot dip galvanized water tank is our real project in Myanmar,do not copy.</p>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md">
-                    <h2 class="mt-5 mb-3">Huili FRP Water Tank Descriptions:</h2>
+                    <h2 class="mt-5 mb-3">Huili Water Tank Descriptions:</h2>
                     <ol>
-                        <li class="mb-3">FRP is the abbreviation of fiberglass reinforcement plastics,widely used in
-                            firefighting,residence and somewhere lacking water.
+                        <li class="mb-3">Hot dip galvanized water tank consists of three types of panels which can customize capacity according local area.
                         </li>
-                        <li class="mb-3">Fiberglass water tank is assembled by pieces of panels and shape customized
-                            according to requirement and some are partitions in the between for better use.
+                        <li class="mb-3">The water tank height is usually set within 4 meters,we have set the water tank height up to 6 meters with my engineer good design.
                         </li>
-                        <li class="mb-3">FRP water tank can holds sea water,waste water,drinking water and many kind of
-                            water,all panels are made of food grade materials.
+                        <li class="mb-3">Hot dip galvanized water tank structure is strong which can be used in underground and above ground used for storing firefighting,domestic water.
                         </li>
-                        <li class="mb-3">The cost is much more performance effective and generally it can use last for
-                            over 15 years with easily installation.
+                        <li class="mb-3">Hot dip galvanized water tank warranty time is 18 months since shipped out factory or 12 months since installation,based on close one.
                         </li>
-                        <li class="mb-3">FRP water tank has developed more than 20 years and have a mature manufacturing
-                            technology and systematic installation instruction(Free video support).
+                        <li class="mb-3">Hot dip galvanized water tank mainly used in hospital,residence,campus,supermarket,airport,football ground,and somewhere lacking water.
                         </li>
                     </ol>
                 </div>
@@ -118,21 +113,17 @@
 
             <div class="row">
                 <div class="col-md">
-                    <h2 class="mt-5 mb-3">Huili FRP Water Tank Features:</h2>
+                    <h2 class="mt-5 mb-3">Huili hot dip galvanized water tank features:</h2>
                     <ol>
-                        <li class="mb-3">All panels are made of food grade class materials and national standards.
+                        <li class="mb-3"> All hot dip galvanized materials and national standard.
                         </li>
-                        <li class="mb-3">Inner accessories and outer accessories are alternative for drinking water or
-                            non-drinking water.
+                        <li class="mb-3">Panels consist of 1000x1000mm,1000x500mm,500x500mm three types.
                         </li>
-                        <li class="mb-3">Thickness tolerance is almost same with the real mark,the below table will show
-                            our thickness and corresponding kilograms.
+                        <li class="mb-3">Water tank uses the different panel thickness according to above table.
                         </li>
-                        <li class="mb-3">Tank panels are made of three types including
-                            1000x1000mm,1000x500mm,500x500mm,better satisfy the different shape requirement.
+                        <li class="mb-3">U-steel is hot dip galvanized or painted into red color according to customer’s requirement.
                         </li>
-                        <li class="mb-3">U-steel structure is available for both bolt connection and welding
-                            connection,material is available for both painted red and hot dip galvanized.
+                        <li class="mb-3">It is alternative to be insulated or not as choices
                         </li>
                     </ol>
                 </div>
@@ -140,7 +131,7 @@
 
             <div class="row">
                 <div class="col-md">
-                    <h2 class="mt-5 mb-3">Huili Water Tank Height VS panel thickness</h2>
+                    <h2 class="mt-5 mb-3">Huili Water Tank Height VS board thickness</h2>
                 </div>
             </div>
 
@@ -162,161 +153,93 @@
                         <tbody>
                             <tr>
                                 <td>1</td>
-                                <td>10</td>
-                                <td>10</td>
+                                <td>3</td>
+                                <td>3</td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
-                                <td>5</td>
+                                <td>2</td>
                             </tr>
                             <tr>
                                 <td>1.5</td>
-                                <td>10</td>
-                                <td>10</td>
-                                <td>8</td>
+                                <td>3</td>
+                                <td>3</td>
+                                <td>3</td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
-                                <td>5</td>
+                                <td>2</td>
                             </tr>
                             <tr>
                                 <td>2</td>
-                                <td>12</td>
-                                <td>10</td>
-                                <td>8</td>
+                                <td>3</td>
+                                <td>3</td>
+                                <td>3</td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
-                                <td>5</td>
+                                <td>2</td>
                             </tr>
                             <tr>
                                 <td>2.5</td>
-                                <td>12</td>
-                                <td>12</td>
-                                <td>10</td>
-                                <td>8</td>
+                                <td>4</td>
+                                <td>4</td>
+                                <td>3</td>
+                                <td>3</td>
                                 <td></td>
                                 <td></td>
-                                <td>5</td>
+                                <td>2</td>
                             </tr>
                             <tr>
                                 <td>3</td>
-                                <td>14</td>
-                                <td>14</td>
-                                <td>12</td>
-                                <td>8</td>
+                                <td>4</td>
+                                <td>4</td>
+                                <td>3</td>
+                                <td>3</td>
                                 <td></td>
                                 <td></td>
-                                <td>5</td>
+                                <td>2</td>
                             </tr>
                             <tr>
                                 <td>3.5</td>
-                                <td>16</td>
-                                <td>14</td>
-                                <td>12</td>
-                                <td>10</td>
-                                <td>8</td>
+                                <td>4</td>
+                                <td>4</td>
+                                <td>3</td>
+                                <td>2.5</td>
+                                <td>2.5</td>
                                 <td></td>
-                                <td>5</td>
+                                <td>2</td>
                             </tr>
                             <tr>
                                 <td>4</td>
-                                <td>18</td>
-                                <td>18</td>
-                                <td>14</td>
-                                <td>12</td>
-                                <td>10</td>
-                                <td></td>
                                 <td>5</td>
+                                <td>5</td>
+                                <td>4</td>
+                                <td>3</td>
+                                <td>2.5</td>
+                                <td></td>
+                                <td>2</td>
                             </tr>
                             <tr>
                                 <td>4.5</td>
-                                <td>20</td>
-                                <td>20</td>
-                                <td>16</td>
-                                <td>14</td>
-                                <td>12</td>
-                                <td>10</td>
                                 <td>5</td>
+                                <td>5</td>
+                                <td>5</td>
+                                <td>4</td>
+                                <td>3</td>
+                                <td>2.5</td>
+                                <td>2</td>
                             </tr>
                             <tr>
                                 <td>5</td>
-                                <td>20</td>
-                                <td>20</td>
-                                <td>16</td>
-                                <td>14</td>
-                                <td>12</td>
-                                <td>10</td>
                                 <td>5</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-
-
-            <div class="row">
-                <div class="col-md">
-                    <h2 class="mt-5 mb-3">Huili Water Tank Unit Panel VS Unit weight
-
-                    </h2>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md">
-                    <table class="table table-bordered table-striped">
-                        <thead>
-                            <tr>
-                                <th scope="col">Item</th>
-                                <th scope="col">5 mm</th>
-                                <th scope="col">7 mm</th>
-                                <th scope="col">8 mm</th>
-                                <th scope="col">10 mm</th>
-                                <th scope="col">12 mm</th>
-                                <th scope="col">14 mm</th>
-                                <th scope="col">16 mm</th>
-                                <th scope="col">18 mm</th>
-                                <th scope="col">20 mm</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="col">500x500 mm</th>
-                                <td>#</td>
-                                <td>4.5 kg</td>
-                                <td>4.8 kg</td>
-                                <td>5.8 kg</td>
-                                <td>6.7 kg</td>
-                                <td>7.5 kg</td>
-                                <td>8.5 kg</td>
-                                <td>9.5 kg</td>
-                                <td>#</td>
-                            </tr>
-                            <tr>
-                                <th scope="col">500x1000 mm</th>
-                                <td>7 kg</td>
-                                <td>#</td>
-                                <td>9 kg</td>
-                                <td>11 kg</td>
-                                <td>13 kg</td>
-                                <td>15 kg</td>
-                                <td>17 kg</td>
-                                <td>19 kg</td>
-                                <td>21 kg</td>
-                            </tr>
-                            <tr>
-                                <th scope="col">1000x1000 mm</th>
-                                <td>12 kg</td>
-                                <td>14.5 kg</td>
-                                <td>17.5 kg</td>
-                                <td>21 kg</td>
-                                <td>25 kg</td>
-                                <td>29 kg</td>
-                                <td>33 kg</td>
-                                <td>37 kg</td>
-                                <td>41 kg</td>
+                                <td>5</td>
+                                <td>5</td>
+                                <td>4</td>
+                                <td>3</td>
+                                <td>2.5</td>
+                                <td>2</td>
                             </tr>
                         </tbody>
                     </table>
