--- a/product_rain_water_storage_tank.html
+++ b/product_rain_water_storage_tank.html
@@ -75,8 +75,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md text-center mt-5 mb-5 text-white">
-                    <h1>Farm water tank</h1>
-                    Home > GRP water tank > Farm water tank
+                    <h1>Rain water tank</h1>
+                    Home > GRP water tank > Rain water tank
                     </nav>
                 </div>
             </div>
@@ -88,8 +88,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md text-center">
-                    <img class="img-fluid" src="../img/farm-water-tank-2.jpg" alt="">
-                    <p>*Note: This is farm water tank real project in Malaysia,do not copy.</p>
+                    <img class="img-fluid" src="img/Fiberglass-water-storage-tank.jpg" alt="">
+                    <p>*Note: This is rain water tank  real project in Philippines,do not copy.</p>
                 </div>
             </div>
 
