--- a/all_products_4.html
+++ b/all_products_4.html
@@ -91,7 +91,7 @@
 
         <div class="row">
             <div class="col-md-3 mt-4">
-              <a class="text-decoration-none text-dark" href="">
+              <a class="text-decoration-none text-dark" href="5000l_grp_water_tank.html">
                 <div class="card">
                     <img src="img/5000l-grp-water-tank.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
@@ -101,7 +101,7 @@
               </a>
             </div>
             <div class="col-md-3 mt-4">
-              <a class="text-decoration-none text-dark" href="">
+              <a class="text-decoration-none text-dark" href="frp_water_tank.html">
                 <div class="card">
                     <img src="img/grp.png" class="card-img-top" alt="...">
                     <div class="card-body text-center">
