--- a/all_products_1_2.html
+++ b/all_products_1_2.html
@@ -355,11 +355,21 @@
   
       <div class="row">
         <div class="col-md-3 col-sm-4 col-xs-4 mt-4">
-          <a class="text-decoration-none text-dark" href="stainless_rectangular_water_tank.html">
+          <a class="text-decoration-none text-dark" href="stainless_hot_large_water_tank.html">
             <div class="card">
-              <img src="img/rectangular-water-tank.jpg" class="card-img-top img-fluid" alt="...">
+              <img src="img/stainless-steel-hot-water-tank-1.jpg" class="card-img-top img-fluid" alt="...">
               <div class="card-body text-center">
-                <p class="card-title mt-2">Rectangular water tank</p>
+                <p class="card-title mt-2">Stainless steel hot water tank</p>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-3 mt-4">
+          <a class="text-decoration-none text-dark" href="stainless_steel_tank_price.html">
+            <div class="card">
+              <img src="img/rectangular-water-tank.jpg" class="card-img-top" alt="...">
+              <div class="card-body text-center">
+                <p class="card-title mt-2">Stainless steel tank price</p>
               </div>
             </div>
           </a>
@@ -367,69 +377,9 @@
         <div class="col-md-3 mt-4">
           <a class="text-decoration-none text-dark" href="stainless_large_water_tank.html">
             <div class="card">
-              <img src="img/Stainless-Steel-Water-Tank-02.jpg" class="card-img-top" alt="...">
+              <img src="img/stainless_steel_water_tank.png" class="card-img-top" alt="...">
               <div class="card-body text-center">
-                <p class="card-title mt-2">Large water tank</p>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 mt-4">
-          <a class="text-decoration-none text-dark" href="304_stainless_steel_water_tank.html">
-            <div class="card">
-              <img src="img/304-stainless-steel-water-tank.jpg" class="card-img-top" alt="...">
-              <div class="card-body text-center">
-                <p class="card-title mt-2">304 stainless steel water tank</p>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 mt-4">
-          <a class="text-decoration-none text-dark" href="food_grade_stainless_steel_water_tank.html">
-            <div class="card">
-              <img src="img/food-grade-stainless-steel-tank.jpg" class="card-img-top" alt="...">
-              <div class="card-body text-center">
-                <p class="card-title mt-2">Food grade stainless steel tank</p>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 mt-4">
-          <a class="text-decoration-none text-dark" href="stainless_steel_water_tank_1000.html">
-            <div class="card">
-              <img src="img/stainless-steel-water-tank-1000-liter.jpg" class="card-img-top" alt="...">
-              <div class="card-body text-center">
-                <p class="card-title mt-2">Stainless steel water tank 1000 liter</p>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 mt-4">
-          <a class="text-decoration-none text-dark" href="1000_stainless_steel_water_tank_price.html">
-            <div class="card">
-              <img src="img/1000-liter-stainless-steel-water-tank-price.jpg" class="card-img-top" alt="...">
-              <div class="card-body text-center">
-                <p class="card-title mt-2">1000 liter stainless steel water tank price</p>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 mt-4">
-          <a class="text-decoration-none text-dark" href="316_stainless_steel_water_tank.html">
-            <div class="card">
-              <img src="img/Stainless-Steel-Water-Tank-01.jpg" class="card-img-top" alt="...">
-              <div class="card-body text-center">
-                <p class="card-title mt-2">316 stainless steel water tank</p>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 mt-4">
-          <a class="text-decoration-none text-dark" href="stainless_steel_water_tank_for_sale.html">
-            <div class="card">
-              <img src="img/Stainless-Steel-Water-Tank-04.jpg" class="card-img-top" alt="...">
-              <div class="card-body text-center">
-                <p class="card-title mt-2">Stainless steel water tanks for sale</p>
+                <p class="card-title mt-2">Welding stainless steel water tank</p>
               </div>
             </div>
           </a>
@@ -440,8 +390,8 @@
         <div class="col-md d-flex justify-content-center">
           <nav aria-label="...">
             <ul class="pagination">
-              <li class="page-item active"><a class="page-link" href="all_products.html">1</a></li>
-              <li class="page-item" aria-current="page">
+              <li class="page-item"><a class="page-link" href="all_products.html">1</a></li>
+              <li class="page-item active" aria-current="page">
                 <a class="page-link" href="all_products_1_2.html">2</a>
               </li>
             </ul>
