--- a/all_products_2.html
+++ b/all_products_2.html
@@ -91,7 +91,7 @@
 
         <div class="row">
             <div class="col-md-3 mt-4">
-              <a class="text-decoration-none text-dark" href="">
+              <a class="text-decoration-none text-dark" href="collapsible_water_tank.html">
                 <div class="card">
                     <img src="img/collapsible-water-tank.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
@@ -101,7 +101,7 @@
               </a>
             </div>
             <div class="col-md-3 mt-4">
-              <a class="text-decoration-none text-dark" href="">
+              <a class="text-decoration-none text-dark" href="grp_water_tank.html">
                 <div class="card">
                     <img src="img/grp-water-tank.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
@@ -111,7 +111,7 @@
               </a>
             </div>
             <div class="col-md-3 mt-4">
-              <a class="text-decoration-none text-dark" href="">
+              <a class="text-decoration-none text-dark" href="1000m3_water_tank.html">
                 <div class="card">
                     <img src="img/1000-m3-water-tank.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
@@ -121,7 +121,7 @@
               </a>
             </div>
             <div class="col-md-3 mt-4">
-              <a class="text-decoration-none text-dark" href="">
+              <a class="text-decoration-none text-dark" href="500l_water_tank_price.html">
                 <div class="card">
                     <img src="img/500-liter-water-tank-price.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
@@ -131,15 +131,17 @@
               </a>
             </div>
             <div class="col-md-3 mt-4">
+              <a class="text-decoration-none text-dark" href="1000l_plastic_water_tank.html">
                 <div class="card">
-                    <img src="img/GRP-Water-Tank-01.jpg" class="card-img-top" alt="...">
-                    <div class="card-body text-center">
-                      <p class="card-title mt-2">1000l plastic water tank</p>
-                    </div>
+                  <img src="img/GRP-Water-Tank-01.jpg" class="card-img-top" alt="...">
+                  <div class="card-body text-center">
+                    <p class="card-title mt-2">1000l plastic water tank</p>
                   </div>
+                </div>
+              </a>
             </div>
             <div class="col-md-3 mt-4">
-              <a class="text-decoration-none text-dark" href="">
+              <a class="text-decoration-none text-dark" href="water_tank_1000l.html">
                 <div class="card">
                     <img src="img/GRP-Water-Tank-04.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
@@ -149,7 +151,7 @@
               </a>
             </div>
             <div class="col-md-3 mt-4">
-              <a class="text-decoration-none text-dark" href="">
+              <a class="text-decoration-none text-dark" href="1000l_water_tank_price.html">
                 <div class="card">
                     <img src="img/1000-liter-water-tank-price-1.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
@@ -159,7 +161,7 @@
               </a>
             </div>
             <div class="col-md-3 mt-4">
-              <a class="text-decoration-none text-dark" href="">
+              <a class="text-decoration-none text-dark" href="water_storage_tank_5000l.html">
                 <div class="card">
                     <img src="img/water-storage-tank-50000-liter.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
