--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-white">
     <div class="container">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">
+        <img src="img/hl.png" alt="" width="100" height="50">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -59,8 +61,8 @@
               Projects
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Square tank project</a></li>
-              <li><a class="dropdown-item" href="#">Corrugated tank projects</a></li>
+              <li><a class="dropdown-item" href="project.html">Square tank project</a></li>
+              <li><a class="dropdown-item" href="project_2.html">Corrugated tank projects</a></li>
             </ul>
           </li>
           <li class="nav-item">
