--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <img src="img/hl.png" class="img-fluid" style="border-radius: 20px;">
+                <img src="img/stock.png" class="img-fluid" style="border-radius: 20px;">
               </div>
               <div class="flip-box-back">
                 <img src="img/hl2.png" class="img-fluid" style="border-radius: 20px;">
